--- a/CTFd/themes/core/templates/page.html
+++ b/CTFd/themes/core/templates/page.html
@@ -2,6 +2,17 @@
 
 {% block content %}
 	<div class="container">
-	{{ content | safe }}
+	<!-- {{ content | safe }} -->
+	<div class="row">
+    <div class="col-md-6 offset-md-3">
+    	<br>
+    	<br>
+    	<br>
+        <img class="nullByteLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh;" src="themes/core/static/img/NullByteCTF.png" />
+        <br>
+        <img class="mitLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh;" src="themes/core/static/img/MIT.jpg" />
+        <img class="ttLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh; position: absolute; left: 50vw" src="themes/core/static/img/tt.png"/>
+    </div>
+</div>
 	</div>
 {% endblock %}
