--- a/CTFd/themes/core/templates/register.html
+++ b/CTFd/themes/core/templates/register.html
@@ -20,10 +20,8 @@
 				</div>
 			{% endfor %}
 
-			<a class="btn btn-secondary btn-lg btn-block" href="{{ url_for('auth.oauth_login') }}">Login with Major League Cyber</a>
-
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfzGDLlSi1jANief2CSCJdEce6M3LEePGIjaLgmNKG3p0Nuaw/viewform?embedded=true" width="100%" height="1120" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 			<hr>
-
 			<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
 				<div class="form-group">
 					<label for="name-input">
@@ -50,6 +48,7 @@
 				</div>
 				<input type="hidden" name="nonce" value="{{ nonce }}">
 			</form>
+			
 		</div>
 	</div>
 </div>
