--- a/CTFd/themes/admin/templates/base.html
+++ b/CTFd/themes/admin/templates/base.html
@@ -132,7 +132,7 @@
 		{% endblock %}
 	</main>
 
-	<footer class="footer pt-2">
+	<!-- <footer class="footer pt-2">
 		<div class="container text-center">
 			<a href="https://ctfd.io">
 				<small class="text-muted">
@@ -143,7 +143,7 @@
 				<small class="text-muted"><br> Version {{ get_config('ctf_version') }}</small>
 			</span>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script src="{{ url_for('views.themes', theme='core', path='js/vendor/jquery.min.js') }}"></script>
 	<script src="{{ url_for('views.themes', theme='core', path='js/vendor/markdown-it.min.js') }}"></script>
