--- a/CTFd/themes/core/templates/login.html
+++ b/CTFd/themes/core/templates/login.html
@@ -20,10 +20,10 @@
 				</div>
 			{% endfor %}
 
-			<a class="btn btn-secondary btn-lg btn-block" href="{{ url_for('auth.oauth_login') }}">Login with Major
+			<!-- <a class="btn btn-secondary btn-lg btn-block" href="{{ url_for('auth.oauth_login') }}">Login with Major
 				League Cyber</a>
 
-			<hr>
+			<hr> -->
 
 			<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
 				<div class="form-group">
