--- a/CTFd/themes/core/templates/page.html
+++ b/CTFd/themes/core/templates/page.html
@@ -10,8 +10,8 @@
     	<br>
         <img class="nullByteLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh;" src="themes/core/static/img/NullByteCTF.png" />
         <br>
-        <img class="mitLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh;" src="themes/core/static/img/MIT.jpg" />
-        <img class="ttLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh; position: absolute; left: 50vw" src="themes/core/static/img/tt.png"/>
+        <!-- <img class="mitLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh;" src="themes/core/static/img/MIT.jpg" />
+        <img class="ttLogo" style="max-width: 500px;padding: 50px;padding-top: 14vh; position: absolute; left: 50vw" src="themes/core/static/img/tt.png"/> -->
     </div>
 </div>
 	</div>
