--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -42,7 +42,13 @@
 		CTFd.options.end = ctf_end;
 	</script>
 </head>
-<body>
+<body> 
+	<style>
+	body {
+		height: 100vh;
+		width: 100vw;
+		}
+	</style>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<div class="container">
 			<a href="{{ url_for('views.static_html', route='/') }}" class="navbar-brand">
