--- a/CTFd/themes/core/templates/page.html
+++ b/CTFd/themes/core/templates/page.html
@@ -14,6 +14,259 @@
         <br>
         <img class="nullByteLogo" src="themes/core/static/img/NullByteCTF.png" />
         <br>
+         <style type="text/css">
+
+      .button {
+
+        width: 150px;
+
+        padding: 10px;
+
+        background-color: #ffffff;
+
+        font-weight: bold;
+
+        text-decoration: none;
+
+        color: gray;
+
+      }
+
+      #cover {
+
+        position: fixed;
+
+        top: 0;
+
+        left: 0;
+
+        background: rgba(0, 0, 0, 0.6);
+
+        z-index: 5;
+
+        width: 100%;
+
+        height: 100%;
+
+        display: none;
+
+      }
+
+      #loginScreen {
+
+        height: 80vh;
+
+        width: 90vw;
+
+        margin: 0 auto;
+
+        position: relative;
+
+        z-index: 10;
+
+        bottom: 6vh;
+
+        display: none;
+
+        background: url(login.png) no-repeat;
+
+        border: 5px solid #cccccc;
+
+        border-radius: 10px;
+
+        background-color: #fafafa;
+
+        text-align: center;
+
+      }
+            #loginScreen1 {
+
+        height: 80vh;
+
+        width: 90vw;
+
+        margin: 0 auto;
+
+        position: relative;
+
+        z-index: 10;
+
+        bottom: 6vh;
+
+        display: none;
+
+        background: url(login.png) no-repeat;
+
+        border: 5px solid #cccccc;
+
+        border-radius: 10px;
+
+        background-color: #fafafa;
+
+      }
+
+      #loginScreen:target,
+
+      #loginScreen:target + #cover {
+
+        display: block;
+
+        opacity: 2;
+
+      }
+
+        #loginScreen1:target,
+
+        #loginScreen1:target + #cover {
+
+        display: block;
+
+        opacity: 2;
+
+      }
+
+      #loginScreen1 > h3 {
+        margin-top: 8vh;
+      }
+      #loginScreen1 > h2 {
+        margin-top: 10vh;
+      }
+      .cancel {
+
+        display: block;
+
+        position: absolute;
+
+        top: 3px;
+
+        right: 2px;
+
+        background: rgb(245, 245, 245);
+
+        color: black;
+
+        height: 30px;
+
+        width: 35px;
+
+        font-size: 30px;
+
+        text-decoration: none;
+
+        text-align: center;
+
+        font-weight: bold;
+
+      }
+
+    </style>
+
+  </head>
+
+  <body>
+
+    <div align="center">
+
+      <br /><br /><br /><br />
+
+      <a href="#loginScreen" class="button">How to play</a>
+      <a href="#loginScreen1" class="button">Contact us</a>
+      <br>
+        <br>
+    <br>
+    <br>
+    <h2>Starting 10-10-19 02:00AM</h2>
+    </div>
+
+    <div id="loginScreen">
+
+      <a href="#" class="cancel">×</a>
+
+      <h1 id="ruleText">How to play</h1>
+      <div id="rules">
+              <ul>
+                <li>NullByte CTF is a Capture the flag event hosted by Turing category of MIT Manipal's TechTatva
+                </li>
+                <li>The challenges will be live on 10th and 11th of October.</li>
+                  <li>This is a jeapordy based CTF with categories like Forensics, PWN, Cryptography, 
+                  Web, Reversing etc.</li>
+                  <li>Solve the challenge with the given statement and files to get a flag.</li>
+                  <li>A flag is a string of the format NullByteCTF{string}.</li>
+                <li>Submission of a correct flag gives the mentioned points.</li>
+                <li>Hints will be added if required.</li>
+                <li>User with the most points is the winner.</li>
+              </ul>
+      </div>
+
+    </div>
+    <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+        #ruleText {
+            margin-bottom: 7vh;
+        }
+
+        #rules {
+            background-color: #ffffff;
+            margin-left: 5vw;
+            margin-top: 1vw;
+            width: 80vw;
+            text-align: left;
+            height: 60vh;
+        }
+
+        li {
+            padding-bottom: 20px;
+        }
+    </style>
+    <div id="loginScreen1">
+
+      <a href="#" class="cancel">×</a>
+
+      <h1><b>Contact Us</b></h1>
+      <h3>Contact us at: turing.techtatva@gmail.com</h3>
+      
+      
+        <style>
+            #allContact {
+                position: relative;
+                top: 20%;
+            }
+
+            #eventHeads {
+                display: flex;
+                text-align: center;
+                margin-top: 30vh;
+            }
+            #teja {
+                width: 47vw;
+                text-align: left;
+                margin-left: 3vw;
+            }
+            #faizaan {
+                width: 47vw;
+                text-align: right;
+                margin-right: 4vw;
+            }
+        </style>
+        <div id="allContact">
+      <h2>Contact our Event Heads</h2>
+  </div>
+      <div id="eventHeads">
+          <div id="teja">
+              <h4>Teja</h4>
+              <h5>juluruteja@gmail.com</h5>
+          </div>
+          <div id="faizaan">
+              <h4>Faizaan</h4>
+              <h5>faizaan.m@gmail.com</h5>
+          </div>
+          
+      </div>
+    </div>
+
+    <div id="cover"></div>
       
         <style>
             ::webkit-scroll {
@@ -36,6 +289,7 @@
                 top: 5vh;
             }
             #headLogo {
+                margin-top: 7vh;
                 width: 100vw;
                 display: flex;
                 flex-direction: row;
