--- a/CTFd/themes/core/templates/register.html
+++ b/CTFd/themes/core/templates/register.html
@@ -4,14 +4,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="jumbotron">
-	<div class="container">
+<div id="titleHead">
 		<h1>Register</h1>
 	</div>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-6 offset-md-3">
 			{% for error in errors %}
 				<div class="alert alert-danger alert-dismissable" role="alert">
 				  <span class="sr-only">Error:</span>
@@ -19,39 +14,75 @@
 				  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
 				</div>
 			{% endfor %}
-
+			<div id="mainframe">
+				<div id="gform">
 			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfzGDLlSi1jANief2CSCJdEce6M3LEePGIjaLgmNKG3p0Nuaw/viewform?embedded=true" width="100%" height="1120" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-			<hr>
-			<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
-				<div class="form-group">
+		</div>
+			<div id="regisForm">
+			<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="formAll">
+	
 					<label for="name-input">
 						User Name
 					</label>
-					<input class="form-control" type="text" name="name" id="name-input" {% if name %}value="{{ name }}"{% endif %} />
-				</div>
-				<div class="form-group">
+					<input class="inputThis" type="text" name="name" id="name-input" {% if name %}value="{{ name }}"{% endif %} />
+	
+				
 					<label for="email-input">
 						Email
 					</label>
-					<input class="form-control" type="text" name="email" id="email-input" {% if email %}value="{{ email }}"{% endif %} />
-				</div>
-				<div class="form-group">
+					<input class="inputThis" type="text" name="email" id="email-input" {% if email %}value="{{ email }}"{% endif %} />
+	
+				
 					<label for="password-input">
 						Password
 					</label>
-					<input class="form-control" type="password" name="password" id="password-input" {% if password %}value="{{ password }}"{% endif %}/>
-				</div>
-				<div class="row pt-3">
-					<div class="col-md-12">
+					<input class="inputThis" type="password" name="password" id="password-input" {% if password %}value="{{ password }}"{% endif %}/>
+					<br>
+				
 						<button type="submit" tabindex="0" class="btn btn-md btn-primary btn-outlined float-right">Submit</button>
-					</div>
-				</div>
+				
 				<input type="hidden" name="nonce" value="{{ nonce }}">
 			</form>
-			
 		</div>
 	</div>
-</div>
+<style>
+	#titleHead {
+		text-align: center;
+		width: 100vw;
+		height: 13vh;
+		background-color: #212529;
+		color: white;
+	}
+	#titleHead > h1{
+		line-height: 13vh;
+	}
+	#mainframe {
+		margin-top: 20px;
+		display: flex;
+		flex-direction: row;
+	}
+
+	#gform {
+		position: relative;
+		border: 0;
+		margin: 0;
+		width: 45vw !important;
+	}
+
+	#regisform {
+		width: 45vw;
+		border: 0;
+	}
+
+	input {
+		display: block;
+		width: 35vw;
+		margin-left: 6vw;
+	}
+	label {
+		margin-left: 6vw;	
+	}
+</style>
 {% endblock %}
 
 {% block scripts %}
